backend/backend.log

> backend@1.0.0 dev
> nodemon server.js

[33m[nodemon] 3.1.14[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: js,mjs,cjs,json[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.3.1] injecting env (0) from .env -- tip: ⚙️  enable debug logging with { debug: true }
🚀  Server running on http://localhost:5001
✅  MongoDB connected
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
file:///Users/kushagrasachdeva/Desktop/sonish-final/backend/controllers/orderController.js:111
          from: \`"Sonish Studios" <\${process.env.EMAIL_USER || 'no-reply@sonish.co.in'}>\`,
                ^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:146:18)
    at #translate (node:internal/modules/esm/loader:497:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:544:27)

Node.js v20.19.6
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.3.1] injecting env (0) from .env -- tip: ⚙️  specify custom .env file path with { path: '/custom/path/.env' }
🚀  Server running on http://localhost:5001
✅  MongoDB connected
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.3.1] injecting env (0) from .env -- tip: 🔐 encrypt with Dotenvx: https://dotenvx.com
🚀  Server running on http://localhost:5001
✅  MongoDB connected
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.3.1] injecting env (0) from .env -- tip: 🤖 agentic secret storage: https://dotenvx.com/as2
🚀  Server running on http://localhost:5001
✅  MongoDB connected
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.3.1] injecting env (0) from .env -- tip: 🔐 prevent committing .env to code: https://dotenvx.com/precommit
🚀  Server running on http://localhost:5001
✅  MongoDB connected
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.3.1] injecting env (0) from .env -- tip: ⚙️  write to custom object with { processEnv: myObject }
🚀  Server running on http://localhost:5001
✅  MongoDB connected
